sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value lengh
	for (i<-0 to lengh-2){
                     ^AlgBubbleSort1:11: error: type mismatch;
 found   : Unit
 required: Boolean
}while (swap=true)
            ^