sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var swap=false
do{
	for (i<-0 to lengh-2){
		if (plusPetit(i,i+1)){
			echange(i,i+1)
			swap=true
		}
	}
}while (swap=true)
}
